fix(table): added overflow scroll and text nowrap

--- a/src/components/Table/_table.scss
+++ b/src/components/Table/_table.scss
@@ -1,1 +1,9 @@
 @import 'TableHead/table-head';
+
+.table-container {
+  overflow-x: auto;
+}
+
+table.bx--data-table {
+  white-space: nowrap;
+}
